[project]
name = "mindwm-skd-python"
version = "0.1.0"
authors = [
  { name="Omg Bebebe", email="omgbebebe@gmail.com" },
]
description = "MindWM Python SDK"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/mindwm/mindwm-sdk-python"
Issues = "https://github.com/mindwm/mindwm-sdk-python/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
